# midi2gipiano-windows

./: .gitignore  CMakeLists.txt  Makefile  README.md
resources/: app.manifest  resource.rc
src/: gui.c  gui.h  key_input.c  key_input.h  main.c  midi_parser.c  midi_parser.h  note_mapper.c  note_mapper.h  playback.c  playback.h
